<resources>

    <string name="app_name"> FixIt </string>

    <!-- MainActivity Strings -->
    <string name="tv_welcome"> Bem vindo! </string>
    <string name="btn_login"> Login </string>
    <string name="btn_register"> Registrar </string>
    <string name="title_activity_register">Register</string>

    <!-- Login Strings -->
    <string name="sw_stay_logged">Permanecer logado</string>
    <string name="sw_text_on">Sim</string>
    <string name="sw_text_off">Não</string>

    <!-- RegisterActivity Strings -->
    <string name="tv_name"> Name </string>
    <string name="tv_phone"> Phone </string>
    <string name="tv_email"> Email </string>
    <string name="tv_password"> Password </string>
    <string name="tv_confirm_pass"> Confirm Password </string>
    <string name="hint_name"> Nome </string>
    <string name="hint_phone"> (99) 12345–67899 </string>
    <string name="hint_email"> email@provedor.com </string>
    <string name="hint_password"> ***** </string>
    <string name="hint_confirm_pass"> ***** </string>
    <string name="title_activity_home">HomeActivity</string>

    <!-- HomeActivity -->
    <string name="btn_reportar_problem"> Novo Reporte </string>
    <string name="title_activity_form">FormActivity</string>
    <!-- NavigationView -->
    <!-- HEADER -->
    <string name="head_fix_it_logo">FixIt_logo</string>
    <string name="head_title"> FixIt </string>
    <string name="head_site"> fixit-city.herokuapp.com/ </string>
    <!-- MENU -->
    <string name="navigation_drawer_close">Fechar menu lateral</string>
    <string name="navigation_drawer_open">Abrir menu lateral</string>
    <string name="nav_open_site">Abrir site</string>
    <string name="nav_user_group">Usuário</string>
    <string name="nav_app_group">APP</string>
    <string name="nav_user_info">Informações</string>
    <string name="nav_user_statistics">Minhas estatísticas</string>
    <string name="nav_user_change">Alterar meus dados</string>
    <string name="nav_app_lougout">Logout</string>

    <!-- UserInfoActivity & UserStatisticsActivity -->
    <string name="tv_email_registered">Email cadastrado:</string>
    <string name="tv_phone_registered">Telefone cadastrado:</string>
    <string name="tv_old_password">Digite a senha atual</string>
    <string name="tv_new_password">Digite a nova senha</string>
    <string name="btn_confirm">Confirmar</string>
    <string name="btn_cancel">Cancelar</string>
    <string name="tv_confirm_new_password">Confirme a nova senha</string>
    <string name="btn_update_register">Atualizar cadastro</string>
    <string name="message_zero_resolved"><![CDATA[Obrigado por fazer parte do FixIt! <br/> <br/>
                                            Seus <font color="red"> %d reportes </font> já tiveram
                                                <font color="red"> %d visualizações </font> e esse
                                                    número só aumenta! <br/> ]]></string>
    <string name="message_resolved"> <![CDATA[Obrigado por fazer parte do FixIt! <br/> <br/>
                                        Seus <font color="red"> %d reportes </font> já tiveram
                                            <font color="red"> %d visualizações </font> e esse número
                                                só aumenta! <br/> <br/> O mais importante é se lembrar que,
                                                    de todos eles, <font color="red"> %d </font>
                                                        já foram marcados como resolvidos!]]></string>

    <!-- FormActivity -->
    <string name="tv_select_type"> Tipo de problema: </string>
    <string name="tv_short_desc"> Caso deseje escreva uma breve descrição </string>
    <string name="btn_submit"> Enviar Reporte </string>
    <string-array name="report_type_array">
        <item> Selecione </item>
        <item> Depredação </item>
        <item> Via (Rua/Asfalto) </item>
        <item> Vazamento (Agua/Esgoto) </item>
        <item> Acumulo de Lixo </item>
        <item> Enchente </item>
    </string-array>
    <string name="title_activity_update_register">UpdateRegisterActivity</string>
</resources>