<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:title="@string/nav_open_site"
            android:icon="@drawable/ic_web"/>
    </group>

    <group android:checkableBehavior="single">
        <item
            android:title="@string/nav_user_group">
            <menu>
                <item
                    android:id="@+id/user_info"
                    android:title="@string/nav_user_info"
                    android:icon="@drawable/ic_info"/>
                <item
                    android:id="@+id/user_data"
                    android:title="@string/nav_user_data"
                    android:icon="@drawable/ic_data"/>
                <item
                    android:id="@+id/change_user_data"
                    android:title="@string/nav_user_change"
                    android:icon="@drawable/ic_update"/>
            </menu>
        </item>
    </group>

    <item android:title="@string/nav_app_group">
        <menu>
            <item
                android:id="@+id/Logout"
                android:title="@string/nav_app_lougout"
                android:icon="@drawable/ic_logout"/>
        </menu>
    </item>

</menu>