<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="200dp"
    android:orientation="vertical"
    android:background="@drawable/nav_header_shape"
    android:gravity="bottom"
    android:padding="20dp">

    <ImageView
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:contentDescription="@string/head_fix_it_logo"
        android:src="@mipmap/ic_launcher_round" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/colorBlack"
        android:fontFamily="sans-serif-black"
        android:text="@string/head_title"
        android:textSize="24sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-black"
        android:text="@string/head_site"
        android:textColor="@color/colorBlack"
        android:textSize="14sp" />


</LinearLayout>