<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UserAuth.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center">

    <TextView
        android:id="@+id/tvAppName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-black"
        android:text="@string/app_name"
        android:textSize="50sp"
        app:layout_constraintBottom_toTopOf="@id/sv"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="16dp" />

    <ScrollView
        android:id="@+id/sv"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="5dp"
        app:layout_constraintTop_toBottomOf="@+id/tvAppName">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <RelativeLayout
                android:id="@+id/relativeName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toTopOf="@id/relativeEmail">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignStart="@+id/et_register_name"
                    android:text="@string/tv_name"
                    android:textSize="20sp"
                    app:layout_constraintBottom_toTopOf="@+id/et_register_name"
                    app:layout_constraintStart_toStartOf="@+id/et_register_name" />

                <EditText
                    android:id="@+id/et_register_name"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:layout_margin="40dp"
                    android:maxLines="1"
                    android:lines="1"
                    android:singleLine="true"
                    android:layout_marginTop="64dp"
                    android:background="@drawable/edit_text_shape"
                    android:hint="@string/hint_name"
                    android:paddingStart="6dp"
                    tools:layout_editor_absoluteX="40dp" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/relativeEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toTopOf="@id/relativePhone">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignStart="@+id/et_register_email"
                    android:text="@string/tv_email"
                    android:textSize="20sp"
                    app:layout_constraintBottom_toTopOf="@+id/et_register_email"
                    app:layout_constraintStart_toStartOf="@+id/et_register_email" />

                <EditText
                    android:id="@+id/et_register_email"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:maxLines="1"
                    android:lines="1"
                    android:singleLine="true"
                    android:layout_margin="40dp"
                    android:layout_marginTop="64dp"
                    android:background="@drawable/edit_text_shape"
                    android:hint="@string/hint_email"
                    android:paddingStart="6dp"
                    tools:layout_editor_absoluteX="40dp" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/relativePhone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toTopOf="@id/relativePassword">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignStart="@+id/et_register_phone"
                    android:text="@string/tv_phone"
                    android:textSize="20sp"
                    app:layout_constraintBottom_toTopOf="@+id/et_register_phone"
                    app:layout_constraintStart_toStartOf="@+id/et_register_phone" />

                <com.santalu.maskedittext.MaskEditText
                    android:id="@+id/et_register_phone"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:layout_margin="40dp"
                    android:maxLines="1"
                    android:lines="1"
                    android:singleLine="true"
                    android:layout_marginTop="64dp"
                    android:background="@drawable/edit_text_shape"
                    android:hint="@string/hint_phone"
                    android:inputType="phone"
                    android:paddingStart="6dp"
                    app:met_mask="+55 (##) #####-####"
                    tools:layout_editor_absoluteX="40dp" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/relativePassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toTopOf="@id/relativeConfirmPassword">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignStart="@+id/et_register_password"
                    android:text="@string/tv_password"
                    android:textSize="20sp"
                    app:layout_constraintBottom_toTopOf="@+id/et_register_password"
                    app:layout_constraintStart_toStartOf="@+id/et_register_password" />

                <EditText
                    android:id="@+id/et_register_password"
                    android:maxLines="1"
                    android:lines="1"
                    android:singleLine="true"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:layout_margin="40dp"
                    android:layout_marginTop="64dp"
                    android:background="@drawable/edit_text_shape"
                    android:hint="@string/hint_password"
                    android:inputType="textPassword"
                    android:paddingStart="6dp"
                    tools:layout_editor_absoluteX="40dp" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/relativeConfirmPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toTopOf="parent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignStart="@+id/et_register_confirm_password"
                    android:text="@string/tv_confirm_pass"
                    android:textSize="20sp"
                    app:layout_constraintBottom_toTopOf="@+id/et_register_confirm_password"
                    app:layout_constraintStart_toStartOf="@+id/et_register_confirm_password" />

                <EditText
                    android:id="@+id/et_register_confirm_password"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:layout_margin="40dp"
                    android:layout_marginTop="64dp"
                    android:maxLines="1"
                    android:lines="1"
                    android:singleLine="true"
                    android:background="@drawable/edit_text_shape"
                    android:hint="@string/hint_confirm_pass"
                    android:inputType="textPassword"
                    android:paddingStart="6dp"
                    tools:layout_editor_absoluteX="40dp" />


                <Button
                    android:id="@+id/btnRegisterUser"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:layout_below="@+id/et_register_confirm_password"
                    android:layout_marginStart="40dp"
                    android:layout_marginTop="15dp"
                    android:layout_marginEnd="40dp"
                    android:background="@drawable/button_shape"
                    android:shadowColor="#A8A8A8"
                    android:text="@string/btn_register"
                    android:textColor="#FFFFFF"
                    android:textSize="30sp" />
            </RelativeLayout>
        </LinearLayout>
    </ScrollView>
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/loadingPanel"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center">

        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:indeterminate="true" />

    </RelativeLayout>
</androidx.constraintlayout.widget.ConstraintLayout>