<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/box_inset_layout_padding"
    tools:context=".UserAuth.UserInfoActivity"
    tools:deviceIds="wear">

    <ScrollView
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <TextView
            android:id="@+id/logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="76dp"
            android:fontFamily="sans-serif-black"
            android:text="@string/app_name"
            android:textSize="60sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

            <!-- Edit name -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tv_name"
                app:layout_constraintStart_toStartOf="@id/rl_update_name"
                app:layout_constraintBottom_toTopOf="@id/rl_update_name"
                android:textSize="20sp" />

            <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:id="@+id/rl_update_name"
                android:layout_margin="40dp"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginTop="64dp"
                app:layout_constraintTop_toBottomOf="@id/logo">

                <EditText
                    android:id="@+id/et_update_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/edit_text_shape"
                    android:paddingStart="6dp"
                    android:maxLines="1"
                    android:lines="1"
                    android:singleLine="true"
                    android:hint="@string/hint_name"/>
                <ImageButton
                    android:id="@+id/btn_update_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:src="@drawable/ic_edit"
                    android:layout_centerVertical="true"
                    android:layout_margin="5dp" />
            </RelativeLayout>

            <!-- Edit phone -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tv_phone"
                app:layout_constraintStart_toStartOf="@id/rl_update_phone"
                app:layout_constraintBottom_toTopOf="@id/rl_update_phone"
                android:textSize="20sp" />

            <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:id="@+id/rl_update_phone"
                android:layout_margin="40dp"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginTop="64dp"
                app:layout_constraintTop_toBottomOf="@id/rl_update_name">

                <com.santalu.maskedittext.MaskEditText
                    android:id="@+id/et_update_phone"
                    android:layout_width="match_parent"
                    android:maxLines="1"
                    android:lines="1"
                    android:singleLine="true"
                    android:background="@drawable/edit_text_shape"
                    android:hint="@string/hint_phone"
                    android:inputType="phone"
                    android:paddingStart="6dp"
                    app:met_mask="+55 (##) #####-####"
                    tools:layout_editor_absoluteX="40dp"
                    android:layout_height="wrap_content" />
                <ImageButton
                    android:id="@+id/btn_update_phone"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:src="@drawable/ic_edit"
                    android:layout_centerVertical="true"
                    android:layout_margin="5dp" />
            </RelativeLayout>

            <!-- Edit password -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tv_new_password"
                app:layout_constraintStart_toStartOf="@id/rl_update_password"
                app:layout_constraintBottom_toTopOf="@id/rl_update_password"
                android:textSize="20sp" />

            <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:id="@+id/rl_update_password"
                android:layout_margin="40dp"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginTop="64dp"
                app:layout_constraintTop_toBottomOf="@id/rl_update_phone">

                <EditText
                    android:id="@+id/et_update_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:focusable="false"
                    android:background="@drawable/edit_text_shape"
                    android:maxLines="1"
                    android:lines="1"
                    android:singleLine="true"
                    android:paddingStart="6dp"
                    android:hint="@string/hint_password"/>
                <ImageButton
                    android:id="@+id/btn_update_password"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:src="@drawable/ic_edit"
                    android:layout_centerVertical="true"
                    android:layout_margin="5dp" />
            </RelativeLayout>

            <!-- Confirm password -->
            <RelativeLayout
                android:id="@+id/rl_update_confirm_password"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:visibility="gone"
                app:layout_constraintTop_toBottomOf="@id/rl_update_password">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignStart="@+id/et_update_confirm_password"
                    android:text="@string/tv_confirm_new_password"
                    android:textSize="20sp"
                    app:layout_constraintBottom_toTopOf="@+id/et_update_confirm_password"
                    app:layout_constraintStart_toStartOf="@+id/et_update_confirm_password" />

                <EditText
                    android:id="@+id/et_update_confirm_password"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:maxLines="1"
                    android:lines="1"
                    android:singleLine="true"
                    android:layout_margin="40dp"
                    android:layout_marginTop="64dp"
                    android:background="@drawable/edit_text_shape"
                    android:hint="@string/hint_password"
                    android:paddingStart="6dp"
                    tools:layout_editor_absoluteX="40dp" />
            </RelativeLayout>

        <Button
            android:id="@+id/btn_send_update_request"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_margin="40dp"
            android:layout_marginBottom="64dp"
            android:layout_marginTop="64dp"
            android:background="@drawable/button_shape"
            android:shadowColor="#A8A8A8"
            android:text="@string/btn_update_register"
            android:textColor="#FFFFFF"
            app:layout_constraintTop_toBottomOf="@id/rl_update_confirm_password"
            android:textSize="30sp" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

    <RelativeLayout
        android:id="@+id/loadingPanel"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center">

        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:indeterminate="true" />

    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>